--- a/scss/checkout-page.scss
+++ b/scss/checkout-page.scss
@@ -45,10 +45,11 @@
 
 @media (max-width: 768px) {
     .mainContainer {
+        grid-template-columns: auto !important;
         grid-template-areas: 
-        'photo name'
-        'quantity color'
-        'price totalPrice' !important;
+        '. photo .'
+        'name quantity color'
+        'totalPrice quantity price' !important;
         & p {
             font-size: 1.6rem !important;
         }
@@ -59,9 +60,14 @@
     }
     .teddyPrix {
         margin: auto 0rem;
+        padding-right: 0.5rem;
+    }
+    .TeddyTotalPrice {
+        padding-left: 0.5rem;
     }
     .teddyName {
         margin: auto 0rem;
+        padding: 0rem !important;
         & h2 {
             font-size: 2.6rem;
         }
@@ -72,15 +78,22 @@
     .teddyColor {
         margin: auto auto;
         font-size: 1.4rem;
+        text-align: center;
+        padding-right: 0.5rem;
     }
 }
 
 @media (min-width: 768px) {
-    .mainContainer p {
-        font-size: 1.4rem;
-    }
-    .mainContainer .teddyName {
-        font-size: 1.7rem;
+    .mainContainer {
+        & p {
+            font-size: 1.4rem;
+        }
+        & .teddyName {
+            font-size: 1.7rem;
+        }
+        & .TeddyTotalPrice {
+            padding-right: 0.5rem;
+        }
     }
 }
 
@@ -128,7 +141,7 @@ body {
 .mainContainer {
     background-color: rgb(241, 234, 234);
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1.5fr 1fr 0.5fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: 
     'photo name quantity totalPrice'
@@ -148,13 +161,13 @@ body {
 .teddyName {
     grid-area: name;
     text-align: center;
-    padding-top: 1.5rem;
+    padding: 1.5rem 1rem 0rem;
 }
 
 .teddyColor {
     grid-area: color;
     font-size: 1.2rem;
-    padding-left: 2rem;
+    margin: auto;
 }
 
 .teddyQuantity {
@@ -264,6 +277,14 @@ input[type=text], input[type=email], select, textarea {
     border-left-color: palegreen;
     transition: all .5s ease-out;
   }
+
+  input[type=text]:focus, input[type=email]:focus {
+    outline-color: salmon;
+}
+
+  input[type=text]:valid:focus, input[type=email]:valid:focus {
+    outline-color: lime;
+}
   
   input[type=submit] {
     font-size: 1.3rem;
