--- a/views/product-page.html
+++ b/views/product-page.html
@@ -12,6 +12,8 @@
 
         <script src="https://kit.fontawesome.com/c838d79e10.js" crossorigin="anonymous"></script>
 
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
         <title>Produits - Oriteddy - Tous vos oursons préférés au même endroit</title>
     
     </head>
