--- a/css/checkout-page.css
+++ b/css/checkout-page.css
@@ -292,6 +292,10 @@ body {
   padding-bottom: 3rem;
 }
 
+#teddyContainer {
+  padding-bottom: 1.5rem;
+}
+
 #teddyContainer img {
   margin: auto;
   grid-area: photo;
@@ -475,6 +479,32 @@ body {
   font-weight: 700;
 }
 
+#viderPanier {
+  text-align: center;
+  transform: scale(1.4);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+  background-color: #e0513e;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 0rem auto 1rem auto;
+}
+#viderPanier button {
+  cursor: pointer;
+}
+#viderPanier button:hover {
+  color: #0090e3;
+}
+#viderPanier i {
+  color: #fff;
+  font-size: 22px;
+  padding: 5px 8px;
+  justify-self: center;
+}
+
 #finalPrice {
   padding-top: 2rem;
   margin-bottom: 3rem;
@@ -488,13 +518,18 @@ body {
   padding-bottom: 1rem;
 }
 
+.doubleButton {
+  display: flex;
+  flex-direction: column;
+}
+
 .checkout {
   transform: scale(1.4);
-  margin-bottom: 3rem;
   flex: 1;
   display: flex;
-  margin: auto;
+  margin: 2rem auto 0rem auto;
   color: #fff;
+  align-items: center;
   background-color: #0090e3;
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
@@ -513,12 +548,8 @@ body {
   justify-self: center;
 }
 
-.btn-default {
-  flex: 1;
-  transition: 0.4s;
-  color: #fff;
-  background-color: #303030;
-  text-transform: uppercase;
+#checkoutTitle {
+  margin: auto;
 }
 
 input[type=text], input[type=email], select, textarea {
@@ -537,14 +568,14 @@ input[type=text], input[type=email], select, textarea {
 }
 
 input[type=text]:focus, input[type=email]:focus {
-  outline-color: salmon;
+  outline-color: #b12819;
 }
 
 input[type=text]:valid:focus, input[type=email]:valid:focus {
-  outline-color: lime;
+  outline-color: #039603;
 }
 
-input[type=submit] {
+#confirmOrder {
   font-size: 1.3rem;
   text-align: center;
   background-color: #4CAF50;
@@ -555,8 +586,7 @@ input[type=submit] {
   cursor: pointer;
   font-weight: 700;
 }
-
-input[type=submit]:hover {
+#confirmOrder :hover {
   background-color: #45a049;
 }
 
