--- a/css/confirmed-page.css
+++ b/css/confirmed-page.css
@@ -177,3 +177,33 @@ i {
 body {
   margin: 0rem;
 }
+
+#confirmationInfo {
+  color: #333;
+  background-color: #f1eaea;
+  text-align: center;
+  padding: 1.5rem 1rem;
+}
+
+h2 {
+  font-size: 1.6rem;
+}
+
+p {
+  font-size: 1.3rem;
+}
+
+h3 {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  font-weight: normal;
+}
+
+.recap {
+  text-decoration: underline;
+}
+
+.importedInfo {
+  font-size: 1.5rem;
+  font-weight: 650;
+}
