--- a/views/confirmed-page.html
+++ b/views/confirmed-page.html
@@ -12,6 +12,8 @@
 
         <script src="https://kit.fontawesome.com/c838d79e10.js" crossorigin="anonymous"></script>
 
+        <script defer src="confirmed-page.js"></script>
+
         <title>Confirmation - Oriteddy - Merci pour votre commande !</title>
 
     </head>
@@ -24,10 +26,13 @@
                 <h1>Oriteddy</h1>
                 <div class="navbar-responsive collapse">
                     <a class="nav-item nav-link" href="index.html"><i class="fas fa-home"></i>Page Principale</a>
-                    <a class="nav-item nav-link" href="checkout-page.html"><i class="fas fa-shopping-cart"></i>Panier</a>
                 </div>
             </nav>
         </header>
+
+        <main id="confirmationInfo">
+
+        </main>
 
 
         <footer>
@@ -41,10 +46,10 @@
                     </div>
               </div>
               <div class="social">
-                <a href="#"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
-                <a href="#"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/VTTeddyBear/"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.pinterest.com/vtteddybear/"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://instagram.com/vtteddybear/"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/vtteddybear"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
             </div>
             </nav>
         </footer>
