--- a/views/checkout-page.html
+++ b/views/checkout-page.html
@@ -31,7 +31,7 @@
                 </div>
             </nav>
         </header>
-
+        
         <div id="container">
             <div class="hiddenOnForm">
                 <h2 id="checkoutTitle">
@@ -73,16 +73,16 @@
                 <div id="onclick--form">
                     <form class="form-container" id="postData">
                         <label for="firstName">Prénom</label>
-                        <input type="text" name="firstName" placeholder="Votre prénom..." id="firstName" required>
+                        <input type="text" name="firstName" placeholder="Votre prénom..." id="firstName" maxlength="20" required>
 
                         <label for="lastName">Nom de Famille</label>
-                        <input type="text" name="lastName" placeholder="Votre nom..." id="lastName" required>
+                        <input type="text" name="lastName" placeholder="Votre nom..." id="lastName" maxlength="30" required>
 
                         <label for="address">Adresse</label>
-                        <input type="text" name="address" placeholder="Votre adresse..." id="address" required>
+                        <input type="text" name="address" placeholder="Votre adresse..." id="address" maxlength="60" required>
 
                         <label for="city">Ville</label>
-                        <input type="text" name="city" placeholder="Votre ville..." id="city" required>
+                        <input type="text" name="city" placeholder="Votre ville..." id="city" maxlength="35" required>
 
                         <label for="email">Email</label>
                         <input type="email" name="email" placeholder="exemple123@test.com" id="email" required>
@@ -108,10 +108,10 @@
                     </div>
               </div>
               <div class="social">
-                <a href="https://www.facebook.com/VTTeddyBear/"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.pinterest.com/vtteddybear/"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://instagram.com/vtteddybear/"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/vtteddybear"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/VTTeddyBear/" target="_blank"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.pinterest.com/vtteddybear/" target="_blank"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://instagram.com/vtteddybear/" target="_blank"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/vtteddybear" target="_blank"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
             </div>
             </nav>
         </footer>
