--- a/views/confirmed-page.html
+++ b/views/confirmed-page.html
@@ -46,10 +46,10 @@
                     </div>
               </div>
               <div class="social">
-                <a href="https://www.facebook.com/VTTeddyBear/"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.pinterest.com/vtteddybear/"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://instagram.com/vtteddybear/"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/vtteddybear"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/VTTeddyBear/" target="_blank"><span class="social-text">Facebook</span><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.pinterest.com/vtteddybear/" target="_blank"><span class="social-text">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://instagram.com/vtteddybear/" target="_blank"><span class="social-text">Instagram</span><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/vtteddybear" target="_blank"><span class="social-text">Twitter</span><i class="fab fa-twitter"></i></a>
             </div>
             </nav>
         </footer>
